samples/_failures_safe/1761191062_086125_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce2d64e0.c: In function ‘main’:
./samples/SAFE/__tmp_ce2d64e0.c:157: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_ce2d64e0.c:156:5: error: expected declaration or statement at end of input
  156 |     if
      |     ^~
